--- a/style/main.css
+++ b/style/main.css
@@ -15,8 +15,8 @@
 .logoBar .logo h3{font-size: 3em;color: #fff;float: left;}
 .logoBar .logo h4{font-size: 1.5em;color: #fff;position: absolute;left: 4px;top: 57px;letter-spacing: 2px;}
 .logoBar .search_box{padding-top: 28px;}
-.logoBar .search_box .search_text{width: 250px;height: 30px;padding-left: 4px;color: #333;background-color: #fff;}
-.logoBar .search_box .search_btn{width: 60px;height: 30px;background-color: #F7F7F7;margin-left: -6px;border-left: 1px solid #ddd;font-size: 14px;margin-right: 100px;border: 1px solid #ccc\9;}
+.logoBar .search_box .search_text{width: 250px;height: 30px;vertical-align: middle;padding-left: 4px;color: #333;background-color: #fff;}
+.logoBar .search_box .search_btn{width: 60px;height: 30px;vertical-align: middle;background-color: #F7F7F7;margin-left: -6px;border-left: 1px solid #ddd;font-size: 14px;margin-right: 100px;border: 1px solid #ccc\9;}
 .logoBar .search_box .search_btn:hover{background-color: #E5E5E5;cursor: pointer;}
 
 /* navBar */
